hphp/test/zend/good/Zend/tests/ns_026.php.expectf
Method - Foo\Foo::__construct
Func   - Foo\Bar
Method - Foo\Foo::__construct
Method - Foo\Foo::Bar
Func   - Foo\Bar

Fatal error: Call to undefined function Foo\Foo\Bar() in %s/ns_026.php on line 22
